crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__newline_in_type_alias_application_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "A:A\n A\np\n"
---
(BeginTopLevelDecls
    (BeginTypeOrTypeAlias
        UpperIdent=>UpperIdent@0
        InlineTypeColon=>OpColon@1
        TypeName=>UpperIdent@2
    EndTypeOrTypeAlias)
    HintExpr
    UpperIdent=>UpperIdent@3
    HintExpr
    Ident=>LowerIdent@4
EndTopLevelDecls)

[=== canfmt below ===]
TypeAlias(UpperIdent("A"), Name("A"))
UpperIdent("A")
Ident("p")

[=== formatted below ===]

