crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__newline_in_type_alias_application_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "A : A\n    A\np\n"
---
(BeginTopLevelDecls
    (BeginTypeOrTypeAlias
        UpperIdent=>UpperIdent@0
        InlineTypeColon=>OpColon@1
        (* TypeName=>UpperIdent@2 TypeName=>UpperIdent@3 EndTypeApply)
    EndTypeOrTypeAlias)
    HintExpr
    Ident=>LowerIdent@4
EndTopLevelDecls)

[=== canfmt below ===]
TypeAlias(UpperIdent("A"), Apply(Name("A"), [Name("A")]))
Ident("p")

[=== formatted below ===]

