crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__newline_in_type_def_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "R : D\na\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginTypeOrTypeAlias
            UpperIdent=>UpperIdent@0
            InlineTypeColon=>OpColon@1
            TypeName=>UpperIdent@2
        EndTypeOrTypeAlias)
        HintExpr
        Ident=>LowerIdent@3
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
TypeAlias(UpperIdent("R"), Name("D"))
Ident("a")

[=== formatted below ===]

