crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__newline_singleton_list_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "[\n1\n]\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr (BeginList Num=>Int@1 EndList) EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
List([IntBase10("1")])

[=== formatted below ===]

